tests/paczka1/fuzzy1/60305611.err
Error in line 1: 2aUzeCb A395 88,6
Error in line 20: 9uhgbDK4e5 A924 58,2
Error in line 18: K3xWdJiIn A924 14,1
Error in line 31: 9uhgb©K4e5 S372 97,0
Error in line 21: nobFQwe2 A5 11,8
Error in line 35: F5Zfo S372 79,7
Error in line 34: nobFQwe2 A395 64,7
